--- a/config-map/config-map.yaml
+++ b/config-map/config-map.yaml
@@ -9,11 +9,18 @@ data:
   MYSQL_SCHEMA: cities
 
 
-# apiVersion: v1
-# kind: CongigMap
-# metadata:
-#   name: config-map
-# data:
-#   CART_HOST: cart
-#   MYSQL_HOST: mysql
-#   USER_HOST: user
+apiVersion: v1
+kind: CongigMap
+metadata:
+  name: config-map
+data:
+  CART_HOST: cart
+  MYSQL_HOST: mysql
+  USER_HOST: user
+
+
+
+
+
+
+
