--- a/servidces/services.yaml
+++ b/servidces/services.yaml
@@ -1,21 +1,32 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
-  namespace: default
+  name: podservices
   labels:
-    name: nginx-service
-    environment: DEV
+    env: dev
+    resourcetype: Service
 spec:
-  type: NodePort
   selector:
-  # you should provide pod labels here
     dept: cse
   ports:
-  - name: http-port
-    protocol: TCP
-    # service port
+  - name: http
+    protocol: tcp
     port: 80
-    # pod port
-    targetPort: 80
+    target: 80
+
 ---
+kind: Pod
+apiVersion: v1
+metadata:
+  name: debug-pod
+  labels:
+    name: saivinay
+    dept: cse
+    year: twenty
+spec:
+  containers:
+  - name: almalinux
+    image: "almalinux:8"
+    command: ["sleep" , "20000"]
+
+
