--- a/storgaes/emptyDir.yaml
+++ b/storgaes/emptyDir.yaml
@@ -45,7 +45,7 @@ spec:
             - containerPort: 80
           volumeMounts:
             - name: nginx-logs
-              mountPath: var/log/nginx/
+              mountPath: /var/log/nginx/
         - name: filebeat-sidecar
           image: docker.elastic.co/beats/filebeat:7.5.0
           volumeMounts:
@@ -55,7 +55,7 @@ spec:
               mountPath: /usr/share/filebeat/filebeat.yml
               subPath: filebeat.yml 
       volumes:
-        # mouted emoty dir to both the conatiners nginx and filebeat sidecar to share the volume between the pods
+        # mouted emoty dir to both the conatiners nginx and filebeat sidecar to share the volume between the pods.
         - name: nginx-logs
         - name: filebeat-config
           configMap:
