--- a/storgaes/staticeebs.yaml
+++ b/storgaes/staticeebs.yaml
@@ -11,3 +11,54 @@ spec:
   awsElasticBlockStore:
       volumeID: "vol-02b567930cc374a24"
       fsType: ext4
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ebs-static-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
+  storageClassName: ""
+---
+kind: Pod
+apiVersion: v1
+metadata:
+  name: nginx
+  labels:
+    purpose: ebs-static
+spec:
+  containers:
+  - image: nginx
+    name: nginx
+    ports:
+    - containerPort: 80
+    volumeMounts:
+    - mountPath: "/usr/share/nginx/html"
+      name: html
+  volumes:
+    - name: html
+      persistentVolumeClaim:
+        claimName: ebs-static-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  labels:
+    name: nginx
+spec:
+  type: LoadBalancer
+  selector:
+  # you should provide pod labels here
+    purpose: ebs-static
+  ports:
+  - name: http-port
+    protocol: TCP
+    # service port
+    port: 80
+    # pod port
+    targetPort: 80
