--- a/storgaes/staticeebs.yaml
+++ b/storgaes/staticeebs.yaml
@@ -36,29 +36,22 @@ spec:
     name: nginx
     ports:
     - containerPort: 80
-    volumeMounts:
-    - mountPath: "/usr/share/nginx/html"
-      name: html
-  volumes:
-    - name: html
-      persistentVolumeClaim:
-        claimName: ebs-static-pvc
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nginx
-#   labels:
-#     name: nginx
-# spec:
-#   type: LoadBalancer
-#   selector:
-#   # you should provide pod labels here
-#     purpose: ebs-static
-#   ports:
-#   - name: http-port
-#     protocol: TCP
-#     # service port
-#     port: 80
-#     # pod port
-#     targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  labels:
+    name: nginx
+spec:
+  type: LoadBalancer
+  selector:
+  # you should provide pod labels here
+    purpose: ebs-static
+  ports:
+  - name: http-port
+    protocol: TCP
+    # service port
+    port: 80
+    # pod port
+    targetPort: 80
