--- a/storgaes/staticeebs.yaml
+++ b/storgaes/staticeebs.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: ebs-static-pv
+  name: ebs-statisc-testing
 spec:
   capacity:
     storage: 20Gi
@@ -9,13 +9,13 @@ spec:
     - ReadWriteOnce
   storageClassName: ""
   awsElasticBlockStore:
-      volumeID: "vol-0cc8852f6f04bc5bd"
+      volumeID: "vol-0fc7c72c925e723a5"
       fsType: ext4
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ebs-static-pvc
+  name: ebs-static-pvc-testing
 spec:
   accessModes:
     - ReadWriteOnce
@@ -23,42 +23,42 @@ spec:
     requests:
       storage: 20Gi
   storageClassName: ""
----
-kind: Pod
-apiVersion: v1
-metadata:
-  name: nginx
-  labels:
-    purpose: ebs-static
-spec:
-  containers:
-  - image: nginx
-    name: nginx
-    ports:
-    - containerPort: 80
-    volumeMounts:
-    - mountPath: "/usr/share/nginx/html"
-      name: html
-  volumes:
-  - name: html
-    persistentVolumeClaim:
-      claimName: ebs-static-pvc
---- 
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx
-  labels:
-    name: nginx
-spec:
-  type: LoadBalancer
-  selector:
-  # you should provide pod labels here
-    purpose: ebs-static
-  ports:
-  - name: http-port
-    protocol: TCP
-    # service port
-    port: 80
-    # pod port
-    targetPort: 80
+# ---
+# kind: Pod
+# apiVersion: v1
+# metadata:
+#   name: nginx
+#   labels:
+#     purpose: ebs-static
+# spec:
+#   containers:
+#   - image: nginx
+#     name: nginx
+#     ports:
+#     - containerPort: 80
+#     volumeMounts:
+#     - mountPath: "/usr/share/nginx/html"
+#       name: html
+#   volumes:
+#   - name: html
+#     persistentVolumeClaim:
+#       claimName: ebs-static-pvc
+# --- 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: nginx
+#   labels:
+#     name: nginx
+# spec:
+#   type: LoadBalancer
+#   selector:
+#   # you should provide pod labels here
+#     purpose: ebs-static
+#   ports:
+#   - name: http-port
+#     protocol: TCP
+#     # service port
+#     port: 80
+#     # pod port
+#     targetPort: 80
