--- a/storgaes/staticeebs.yaml
+++ b/storgaes/staticeebs.yaml
@@ -23,26 +23,26 @@ spec:
     requests:
       storage: 20Gi
   storageClassName: ""
-# ---
-# kind: Pod
-# apiVersion: v1
-# metadata:
-#   name: nginx
-#   labels:
-#     purpose: ebs-static
-# spec:
-#   containers:
-#   - image: nginx
-#     name: nginx
-#     ports:
-#     - containerPort: 80
-#     volumeMounts:
-#     - mountPath: "/usr/share/nginx/html"
-#       name: html
-#   volumes:
-#   - name: html
-#     persistentVolumeClaim:
-#       claimName: ebs-static-pvc
+---
+kind: Pod
+apiVersion: v1
+metadata:
+  name: nginx
+  labels:
+    purpose: ebs-static
+spec:
+  containers:
+  - image: nginx
+    name: nginx
+    ports:
+    - containerPort: 80
+    volumeMounts:
+    - name: html
+      mountPath: "/usr/share/nginx/html"    
+  volumes:
+    - name: html
+      persistentVolumeClaim:
+        claimName: ebs-static-pvc-testing
 # --- 
 # apiVersion: v1
 # kind: Service
