--- a/storgaes/staticeebs.yaml
+++ b/storgaes/staticeebs.yaml
@@ -43,22 +43,22 @@ spec:
   - name: html
     persistentVolumeClaim:
       claimName: ebs-static-pvc-testing
-# --- 
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nginx
-#   labels:
-#     name: nginx
-# spec:
-#   type: LoadBalancer
-#   selector:
-#   # you should provide pod labels here
-#     purpose: ebs-static
-#   ports:
-#   - name: http-port
-#     protocol: TCP
-#     # service port
-#     port: 80
-#     # pod port
-#     targetPort: 80
+--- 
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  labels:
+    name: nginx
+spec:
+  type: LoadBalancer
+  selector:
+  # you should provide pod labels here
+    purpose: ebs-static
+  ports:
+  - name: http-port
+    protocol: TCP
+    # service port
+    port: 80
+    # pod port
+    targetPort: 80
