--- a/storgaes/staticefc.yaml
+++ b/storgaes/staticefc.yaml
@@ -26,3 +26,43 @@ spec:
     requests:
       storage: 40Gi
   storageClassName: ""
+---
+kind: Pod
+apiVersion: v1
+metadata:
+  name: nginx
+  labels:
+    purpose: efs-static
+spec:
+  containers:
+  - image: nginx
+    name: nginx
+    ports:
+    - containerPort: 80
+    volumeMounts:
+    - mountPath: "/usr/share/nginx/html"
+      name: html
+  volumes:
+  - name: html
+    persistentVolumeClaim:
+      claimName: efs-static-pvc-testing
+--- 
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  labels:
+    name: nginx
+spec:
+  type: LoadBalancer
+  selector:
+  # you should provide pod labels here
+    purpose: efs-static
+  ports:
+  - name: http-port
+    protocol: TCP
+    # service port
+    port: 80
+    # pod port
+    targetPort: 80
+
