--- a/storgaes/dynamicebs.yaml
+++ b/storgaes/dynamicebs.yaml
@@ -6,18 +6,18 @@ provisioner: ebs.csi.aws.com
 volumeBindingMode: WaitForFirstConsumer
 parameters:
   type: gp2
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: efs-static-pvc
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 30Gi
-#   storageClassName: "ebs-dynamic-sc"
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: efs-static-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 30Gi
+  storageClassName: "ebs-dynamic-sc"
 # ---
 # kind: Pod
 # apiVersion: v1
