--- a/storgaes/dynamicebs.yaml
+++ b/storgaes/dynamicebs.yaml
@@ -10,11 +10,12 @@ parameters:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: efs-static-pvc
+  name: ebs-static-pvc-testing
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 30Gi
+      storage: 25Gi
   storageClassName: "ebs-dynamic-sc"
+
