--- a/storgaes/dynamicefs.yaml
+++ b/storgaes/dynamicefs.yaml
@@ -15,13 +15,13 @@ parameters:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: efs-static-pvc-testing
+  name: efs-dynamic-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 40Gi
+      storage: 50Gi
   storageClassName: "efs-dynamic-sc"
 ---
 kind: Pod
@@ -29,7 +29,7 @@ apiVersion: v1
 metadata:
   name: nginx
   labels:
-    purpose: efs-static
+    purpose: ebs-static
 spec:
   containers:
   - image: nginx
@@ -40,10 +40,10 @@ spec:
     - mountPath: "/usr/share/nginx/html"
       name: html
   volumes:
-  - name: html
-    persistentVolumeClaim:
-      claimName: efs-static-pvc-testing
---- 
+    - name: html
+      persistentVolumeClaim:
+        claimName: efs-dynamic-pvc
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -54,7 +54,7 @@ spec:
   type: LoadBalancer
   selector:
   # you should provide pod labels here
-    purpose: efs-static
+    purpose: ebs-static
   ports:
   - name: http-port
     protocol: TCP
@@ -62,4 +62,3 @@ spec:
     port: 80
     # pod port
     targetPort: 80
-
