--- a/storgaes/dynamicefs.yaml
+++ b/storgaes/dynamicefs.yaml
@@ -36,6 +36,13 @@ spec:
     name: nginx
     ports:
     - containerPort: 80
+     volumeMounts:
+    - mountPath: "/usr/share/nginx/html"
+      name: html
+  volumes:
+  - name: html
+    persistentVolumeClaim:
+      claimName: efs-dynamic-pvc
 ---
 apiVersion: v1
 kind: Service
