--- a/storgaes/dynamicefs.yaml
+++ b/storgaes/dynamicefs.yaml
@@ -15,13 +15,13 @@ parameters:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: efs-dynamic-pvc
+  name: efs-static-pvc-testing
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 50Gi
+      storage: 40Gi
   storageClassName: "efs-dynamic-sc"
 ---
 kind: Pod
@@ -29,7 +29,7 @@ apiVersion: v1
 metadata:
   name: nginx
   labels:
-    purpose: ebs-static
+    purpose: efs-static
 spec:
   containers:
   - image: nginx
@@ -42,8 +42,8 @@ spec:
   volumes:
   - name: html
     persistentVolumeClaim:
-      claimName: efs-dynamic-pvc
----
+      claimName: efs-static-pvc-testing
+--- 
 apiVersion: v1
 kind: Service
 metadata:
@@ -54,7 +54,7 @@ spec:
   type: LoadBalancer
   selector:
   # you should provide pod labels here
-    purpose: ebs-static
+    purpose: efs-static
   ports:
   - name: http-port
     protocol: TCP
@@ -62,3 +62,4 @@ spec:
     port: 80
     # pod port
     targetPort: 80
+
