--- a/storgaes/dynamicefs.yaml
+++ b/storgaes/dynamicefs.yaml
@@ -10,56 +10,4 @@ parameters:
   directoryPerms: "700"
   gidRangeStart: "1000" # optional
   gidRangeEnd: "2000" # optional
-  basePath: "/saivinaydynamic" # optional
-# ---
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: efs-static-pvc-testing
-# spec:
-#   accessModes:
-#     - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 40Gi
-#   storageClassName: "efs-dynamic-sc"
-# ---
-# kind: Pod
-# apiVersion: v1
-# metadata:
-#   name: nginx
-#   labels:
-#     purpose: efs-static
-# spec:
-#   containers:
-#   - image: nginx
-#     name: nginx
-#     ports:
-#     - containerPort: 80
-#     volumeMounts:
-#     - mountPath: "/usr/share/nginx/html"
-#       name: html
-#   volumes:
-#   - name: html
-#     persistentVolumeClaim:
-#       claimName: efs-static-pvc-testing
-# --- 
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: nginx
-#   labels:
-#     name: nginx
-# spec:
-#   type: LoadBalancer
-#   selector:
-#   # you should provide pod labels here
-#     purpose: efs-static
-#   ports:
-#   - name: http-port
-#     protocol: TCP
-#     # service port
-#     port: 80
-#     # pod port
-#     targetPort: 80
-
+  basePath: "/roboshop" # optional
