--- a/storgaes/staticeebs.yaml
+++ b/storgaes/staticeebs.yaml
@@ -12,53 +12,53 @@ spec:
       volumeID: "vol-0c744e2a4480309e4"
       fsType: ext4
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: ebs-static-pvc-testing
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 18Gi
-  storageClassName: ""
----
-kind: Pod
-apiVersion: v1
-metadata:
-  name: nginx
-  labels:
-    purpose: ebs-static
-spec:
-  containers:
-  - image: nginx
-    name: nginx
-    ports:
-    - containerPort: 80
-    volumeMounts:
-    - mountPath: "/usr/share/nginx/html"
-      name: html
-  volumes:
-  - name: html
-    persistentVolumeClaim:
-      claimName: ebs-static-pvc-testing
---- 
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx
-  labels:
-    name: nginx
-spec:
-  type: LoadBalancer
-  selector:
-  # you should provide pod labels here
-    purpose: ebs-static
-  ports:
-  - name: http-port
-    protocol: TCP
-    # service port
-    port: 80
-    # pod port
-    targetPort: 80
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: ebs-static-pvc-testing
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 18Gi
+#   storageClassName: ""
+# ---
+# kind: Pod
+# apiVersion: v1
+# metadata:
+#   name: nginx
+#   labels:
+#     purpose: ebs-static
+# spec:
+#   containers:
+#   - image: nginx
+#     name: nginx
+#     ports:
+#     - containerPort: 80
+#     volumeMounts:
+#     - mountPath: "/usr/share/nginx/html"
+#       name: html
+#   volumes:
+#   - name: html
+#     persistentVolumeClaim:
+#       claimName: ebs-static-pvc-testing
+# --- 
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: nginx
+#   labels:
+#     name: nginx
+# spec:
+#   type: LoadBalancer
+#   selector:
+#   # you should provide pod labels here
+#     purpose: ebs-static
+#   ports:
+#   - name: http-port
+#     protocol: TCP
+#     # service port
+#     port: 80
+#     # pod port
+#     targetPort: 80
