--- a/Sets/satatefullset.yaml
+++ b/Sets/satatefullset.yaml
@@ -1,4 +1,3 @@
-# create one storage class and in the statefullset itself the pv and pvc witth craete in syntax itself
 apiVersion: v1
 kind: Service
 metadata:
@@ -11,7 +10,7 @@ spec:
     name: web
   clusterIP: None
   selector:
-    app: nginx-state
+    app: nginx
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -20,31 +19,30 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: nginx-state # has to match .spec.template.metadata.labels
+      app: nginx # has to match .spec.template.metadata.labels
   serviceName: "nginx"
-  replicas: 3 # by default is 1
-  minReadySeconds: 10 # by default is 0
+  replicas: 3 
   template:
     metadata:
       labels:
-        app: nginx-state # has to match .spec.selector.matchLabels
+        app: nginx # has to match .spec.selector.matchLabels
     spec:
-      terminationGracePeriodSeconds: 10
       containers:
       - name: nginx
-        image: nginx
+        image: registry.k8s.io/nginx-slim:0.8
         ports:
         - containerPort: 80
+          name: web
         volumeMounts:
         - name: www
           mountPath: /usr/share/nginx/html
-  # pvc
+  # this is PVC
   volumeClaimTemplates:
   - metadata:
       name: www
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "ebs-dynamic-sc" # menction ur storage class name
+      storageClassName: "ebs-dynamic-sc"
       resources:
         requests:
           storage: 1Gi
