--- a/Sets/satatefullset.yaml
+++ b/Sets/satatefullset.yaml
@@ -36,7 +36,7 @@ spec:
         volumeMounts:
         - name: www
           mountPath: /usr/share/nginx/html
-  # this is PVC
+   this is PVC
   volumeClaimTemplates:
   - metadata:
       name: www
